--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -5,6 +5,11 @@ authors = []
 telemetry = true
 cache_dir = './.cache'
 requirements = []
+[contracts.hardware-integration]
+path = 'contracts/hardware-integration.clar'
+clarity_version = 2
+epoch = 2.5
+
 [contracts.quantum-time-token]
 path = 'contracts/quantum-time-token.clar'
 clarity_version = 2
