--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -15,6 +15,11 @@ path = 'contracts/job-scheduler.clar'
 clarity_version = 2
 epoch = 2.5
 
+[contracts.quantum-marketplace]
+path = 'contracts/quantum-marketplace.clar'
+clarity_version = 2
+epoch = 2.5
+
 [contracts.quantum-time-token]
 path = 'contracts/quantum-time-token.clar'
 clarity_version = 2
