--- a/deployments/default.simnet-plan.yaml
+++ b/deployments/default.simnet-plan.yaml
@@ -59,4 +59,9 @@ plan:
             emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
             path: contracts/hardware-integration.clar
             clarity-version: 2
+        - emulated-contract-publish:
+            contract-name: job-scheduler
+            emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            path: contracts/job-scheduler.clar
+            clarity-version: 2
       epoch: "2.5"
