--- a/deployments/default.simnet-plan.yaml
+++ b/deployments/default.simnet-plan.yaml
@@ -50,18 +50,23 @@ plan:
     - id: 0
       transactions:
         - emulated-contract-publish:
-            contract-name: quantum-time-token
-            emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
-            path: contracts/quantum-time-token.clar
-            clarity-version: 2
-        - emulated-contract-publish:
             contract-name: hardware-integration
             emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
             path: contracts/hardware-integration.clar
             clarity-version: 2
         - emulated-contract-publish:
+            contract-name: quantum-time-token
+            emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            path: contracts/quantum-time-token.clar
+            clarity-version: 2
+        - emulated-contract-publish:
             contract-name: job-scheduler
             emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
             path: contracts/job-scheduler.clar
+            clarity-version: 2
+        - emulated-contract-publish:
+            contract-name: quantum-marketplace
+            emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            path: contracts/quantum-marketplace.clar
             clarity-version: 2
       epoch: "2.5"
